--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     height: 100%;
 }
 
+
 .navbar-container {
     width: 90%;
     margin: auto;
@@ -22,8 +23,12 @@ body {
     border-color: transparent;
 }
 
-.header-navbar-right>li>a {
-    color: white !important;
+.navbar-li {
+    border: 1px solid transparent;
+}
+
+header#header .navbar-default .navbar-nav>li>a {
+    color: white;
     font-size: 12px;
 }
 
@@ -36,9 +41,10 @@ body {
 }
 
 .header-button>a {
-    color: #fc6f6f;
+    color: #fc6f6f !important;
     text-decoration: none;
     font-size: 12px;
+    padding: 0px !important;
 }
 
 .title-container {
@@ -399,6 +405,7 @@ body {
 .increasing-image img {
     width: 100%;
 }
+
 #footer {
     background: #e9e9e9;
 }
