--- a/style.css
+++ b/style.css
@@ -1,5 +1,94 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
 body {
     font-family: 'Roboto';
 }
@@ -49,7 +138,7 @@ header#header .navbar-default .navbar-nav>li>a {
 
 .title-container {
     width: 46%;
-    margin: auto;
+    margin: 100px auto 0;
 }
 
 .header-title,
@@ -60,7 +149,6 @@ header#header .navbar-default .navbar-nav>li>a {
 
 .header-title {
     font-size: 30px;
-    margin-top: 100px;
 }
 
 .header-search {
@@ -143,7 +231,7 @@ header#header .navbar-default .navbar-nav>li>a {
 }
 
 .analyze-content {
-    padding: 0px 65px;
+    padding: 0px 55px;
 }
 
 .title-content {
@@ -151,14 +239,14 @@ header#header .navbar-default .navbar-nav>li>a {
     font-size: 30px;
 }
 
-.title-conten-line {
+.title-content-line {
     position: absolute;
     left: -2px;
     bottom: -25px;
     width: 45px;
 }
 
-.title-conten-line img {
+.title-content-line img {
     width: 100%;
 }
 
@@ -183,6 +271,9 @@ header#header .navbar-default .navbar-nav>li>a {
 
 .external {
     float: left;
+    border-right: 2px solid lightgray;
+    width: 50%;
+    box-sizing: border-box;
 }
 
 .external h3,
@@ -193,6 +284,8 @@ header#header .navbar-default .navbar-nav>li>a {
 
 .company {
     float: right;
+    width: 50%;
+    padding: 0 0 0 10px;
 }
 
 .external p,
@@ -200,24 +293,15 @@ header#header .navbar-default .navbar-nav>li>a {
     font-size: 12px;
     padding: 0;
     margin: 0%;
-
-}
-
-.sources-line {
-    width: 2px;
-    height: 100%;
-    position: absolute;
-    background: lightgray;
-    top: 0;
-    left: 50%;
 }
 
 .main-line {
     margin: 100px 0;
+    text-align: center;
 }
 
 .main-line img {
-    width: 100%;
+    width: 90%;
 }
 
 .find-content {
@@ -281,10 +365,10 @@ header#header .navbar-default .navbar-nav>li>a {
 }
 
 .competitive-content {
-    display: inline-block;
-    width: 33%;
     position: relative;
-    padding: 0 40px 0 50px;
+    padding: 0 20px 20px 50px;
+    margin-top: 10px;
+    border-bottom: 2px solid lightgray;
 }
 
 .competitive-content img {
@@ -304,17 +388,10 @@ header#header .navbar-default .navbar-nav>li>a {
     color: gray;
 }
 
-.competitive-content-first,
-.competitive-content-last {
-    border-bottom: 1px solid lightgray;
-}
-
 .main-integration {
     background: #e9e9e9;
     padding: 80px 0;
 }
-
-.integration-content {}
 
 .integration-content-header {
     margin-top: 35px;
@@ -340,9 +417,8 @@ header#header .navbar-default .navbar-nav>li>a {
 }
 
 .integration-content-footer {
-    position: relative;
-    padding: 8px 0 0 50px;
-
+    display: table-cell;
+    padding: 8px 0 0 0;
 }
 
 .integration-footer-circle {
@@ -350,20 +426,22 @@ header#header .navbar-default .navbar-nav>li>a {
     height: 40px;
     border-radius: 50%;
     background: gray;
-    position: absolute;
-    top: 0;
-    left: 0;
+    display: table-cell;
+}
+
+.integration-footer-content {
+    display: table-cell;
 }
 
 .integration-footer-header {
     font-size: 12px;
-    margin: 0;
+    margin: 10px 0 0 10px;
 }
 
 .integration-footer-text {
     font-size: 12px;
     color: gray;
-    margin: 0;
+    margin: 0 0 0 10px;
 }
 
 .intagration-image img {
@@ -378,7 +456,6 @@ header#header .navbar-default .navbar-nav>li>a {
     width: 80%;
     margin: auto;
     text-align: center;
-
 }
 
 .increasing-header {
@@ -408,4 +485,47 @@ header#header .navbar-default .navbar-nav>li>a {
 
 #footer {
     background: #e9e9e9;
+    padding: 30px;
+}
+
+.service img {
+    width: 20px;
+}
+
+.footer-content-container {
+    display: table;
+    width: 100%;
+    height: 50px;
+}
+
+.footer-content {
+    display: table-cell;
+    vertical-align: bottom;
+    width: 33.3333333%;
+}
+
+.footer-content span {
+    width: 70%;
+}
+
+.footer-content span,
+.policy span {
+    font-size: 12px;
+    color: gray;
+}
+
+.footer-content-center {
+    text-align: center;
+}
+
+.footer-content-last {
+    text-align: right;
+}
+
+.service {
+    opacity: 30%;
+    padding-bottom: 10px;
+}
+.policy>:first-child {
+    margin-right: 10px;
 }
