--- a/style.css
+++ b/style.css
@@ -291,6 +291,7 @@ header#header .navbar-default .navbar-nav>li>a {
     font-size: 12px;
     padding: 0;
     margin: 0%;
+    width: 100%;
 }
 
 .main-line {
